--- a/BlazorApp3/Client/Pages/EditMovieStudio.razor
+++ b/BlazorApp3/Client/Pages/EditMovieStudio.razor
@@ -166,6 +166,12 @@ if(more)
         private string linkUp;
         private string linkIframe;
         private bool more = false;
+            private bool showAlert = false;
+    private Severity severity;
+    private void CloseAlert()
+    {
+        showAlert = false;
+    }
         protected override async Task OnInitializedAsync()
         {
             movie = await _httpClient.GetFromJsonAsync<MovieModel>($"Studio/EditMovie/{Id}");
@@ -180,6 +186,15 @@ if(more)
             movie.MovieId = moviePost.MovieId;
             HttpResponseMessage response = await _httpClient.PostAsJsonAsync<MovieModel>("Studio/EditMovie", movie);
             content = await response.Content.ReadAsStringAsync();
+                  if (response.IsSuccessStatusCode)
+        {
+            severity = Severity.Success;
+        }
+        else
+        {
+            severity = Severity.Error;
+        }
+        showAlert = true;
         }
 
         private async Task OnChooseMovieFile(InputFileChangeEventArgs e)
@@ -205,6 +220,8 @@ if(more)
                 task.Progress.ProgressChanged += async (s, e) =>
                 {
                     content = e.Percentage.ToString();
+                    severity = Severity.Info;
+                    showAlert = true;
                 };
                 try
                 {
@@ -213,11 +230,15 @@ if(more)
                 catch
                 {
                     content = "More 500MB use the other method upload";
+                    severity = Severity.Error;
+ showAlert = true;
                 }
             }
             else
             {
                 content = "Incorrect MIME";
+                severity = Severity.Error;
+ showAlert = true;
             }
         }
 
@@ -242,6 +263,8 @@ if(more)
                 task.Progress.ProgressChanged += async (s, e) =>
                 {
                     content = e.Percentage.ToString();
+                    severity = Severity.Info;
+                    showAlert = true;
                 };
                 try
                 {
@@ -250,11 +273,15 @@ if(more)
                 catch
                 {
                     content = "More 500MB use the other method upload";
+                    severity = Severity.Error;
+ showAlert = true;
                 }
             }
             else
             {
                 content = "Incorrect MIME";
+                severity = Severity.Error;
+ showAlert = true;
             }
         }
         private async Task Upload()
