--- a/BlazorApp3/Client/Pages/ResetPassword.razor
+++ b/BlazorApp3/Client/Pages/ResetPassword.razor
@@ -19,7 +19,11 @@
 						<h3><i class="fa fa-lock fa-4x"></i></h3>
 						<h2 class="text-center">Forgot Password?</h2>
 						<p>You can reset your password here.</p>
-						<div>@content</div>
+							@if (showAlert)
+{
+    <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
+}
+
 						<div class="panel-body">
 
 							<EditForm Model="@resetPasswordModel" OnValidSubmit="@HandleValidSubmit">
@@ -51,10 +55,25 @@
 @code {
 	private readonly ResetPasswordModel resetPasswordModel = new ResetPasswordModel();
 	private string content;
+	    private bool showAlert = false;
+    private Severity severity;
+    private void CloseAlert()
+    {
+        showAlert = false;
+    }
 	private async Task HandleValidSubmit()
 	{
 		HttpResponseMessage response = await _httpClient.PostAsJsonAsync<ResetPasswordModel>("user/resetPassword",
 		resetPasswordModel);
 		content = await response.Content.ReadAsStringAsync();
+		        if (response.IsSuccessStatusCode)
+        {
+            severity = Severity.Success;
+        }
+        else
+        {
+            severity = Severity.Error;
+        }
+        showAlert = true;
 	}
 }
