--- a/BlazorApp3/MauiApp2/Pages/BanAccount.razor
+++ b/BlazorApp3/MauiApp2/Pages/BanAccount.razor
@@ -18,6 +18,7 @@
 	}
 	else
 	{
+	
 		<div class="row">
 			<div class="col-md-4 col-md-offset-4">
 				<div class="panel panel-default">
@@ -41,7 +42,10 @@
 								</div>
 								<div>
 									<div id='container'>
-										<div id='hideMe'>@content</div>
+	@if (showAlert)
+{
+    <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
+}
 									</div>
 								</div>
 							</div>
@@ -57,6 +61,12 @@
 	public string Id { get; set; }
 	private AccountManagementModel acc;
 	private string content;
+    private bool showAlert = false;
+    private Severity severity;
+    private void CloseAlert()
+    {
+        showAlert = false;
+    }
 	protected override async Task OnInitializedAsync()
 	{
 		acc = await _httpClient.GetFromJsonAsync<AccountManagementModel>($"Admin/EditAccount/{Id}");
@@ -65,10 +75,28 @@
 	{
 		HttpResponseMessage response = await _httpClient.PostAsJsonAsync<string>("Admin/Ban", acc.Id);
 		content = await response.Content.ReadAsStringAsync();
+		  if (response.IsSuccessStatusCode)
+        {
+            severity = Severity.Success;
+        }
+        else
+        {
+            severity = Severity.Error;
+        }
+        showAlert = true;
 	}
 	private async Task UnBan()
 	{
 		HttpResponseMessage response = await _httpClient.PostAsJsonAsync<string>("Admin/UnBan", acc.Id);
 		content = await response.Content.ReadAsStringAsync();
+		  if (response.IsSuccessStatusCode)
+        {
+            severity = Severity.Success;
+        }
+        else
+        {
+            severity = Severity.Error;
+        }
+        showAlert = true;
 	}
 }
