--- a/BlazorApp3/MauiApp2/Pages/DeleteMovieAdmin.razor
+++ b/BlazorApp3/MauiApp2/Pages/DeleteMovieAdmin.razor
@@ -64,7 +64,10 @@ else
                                     <EditForm Model="@movie" OnValidSubmit="@HandleValidSubmit">
                                         <DataAnnotationsValidator />
                                         <ValidationSummary />
-                                        <div>@content</div>
+                                        	@if (showAlert)
+{
+    <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
+}
                                         <div class="form-group">
                                             <label>Movie ID</label>
                                             <input class="form-control form-control-lg" type="text" @bind="@movie.MovieId"
@@ -120,6 +123,12 @@ else
         public string Id { get; set; }
         private MovieModel movie;
         private string content;
+            private bool showAlert = false;
+    private Severity severity;
+    private void CloseAlert()
+    {
+        showAlert = false;
+    }
         protected override async Task OnInitializedAsync()
         {
             movie = await _httpClient.GetFromJsonAsync<MovieModel>($"Admin/EditMovie/{Id}");
@@ -128,5 +137,14 @@ else
         {
             HttpResponseMessage response = await _httpClient.PostAsJsonAsync<MovieModel>("Admin/DeleteMovie", movie);
             content = await response.Content.ReadAsStringAsync();
+                   if (response.IsSuccessStatusCode)
+        {
+            severity = Severity.Success;
+        }
+        else
+        {
+            severity = Severity.Error;
+        }
+        showAlert = true;
         }
 }
