--- a/BlazorApp3/MauiApp2/Pages/EditAccount.razor
+++ b/BlazorApp3/MauiApp2/Pages/EditAccount.razor
@@ -53,7 +53,10 @@
 					<div class="login-form">
 						<div class="title">Replace any data of ID </div>
 						<div class="title">@acc.Id</div>
-						<div>@content</div>
+							@if (showAlert)
+{
+    <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
+}
 
 						<form action="#">
 							<div class="input-boxes">
@@ -100,6 +103,12 @@
 	public string Id { get; set; }
 	private AccountManagementModel acc;
 	private string content;
+	    private bool showAlert = false;
+    private Severity severity;
+    private void CloseAlert()
+    {
+        showAlert = false;
+    }
 	protected override async Task OnInitializedAsync()
 	{
 		acc = await _httpClient.GetFromJsonAsync<AccountManagementModel>($"Admin/EditAccount/{Id}");
@@ -111,5 +120,14 @@
 		accNew.DateOfBirth = accNew.DateOfBirth.ToUniversalTime().AddDays(1);
 		HttpResponseMessage response = await _httpClient.PostAsJsonAsync<AccountManagementModel>("Admin/EditAccount", accNew);
 		content = await response.Content.ReadAsStringAsync();
+		        if (response.IsSuccessStatusCode)
+        {
+            severity = Severity.Success;
+        }
+        else
+        {
+            severity = Severity.Error;
+        }
+        showAlert = true;
 	}
 }
