--- a/BlazorApp3/MauiApp2/Pages/EditMovieAdmin.razor
+++ b/BlazorApp3/MauiApp2/Pages/EditMovieAdmin.razor
@@ -35,7 +35,10 @@
 					<div class="login-form">
 						<div class="title">Replace any data of ID </div>
 						<div class="title">@movie.MovieId</div>
-						<div>@content</div>
+							@if (showAlert)
+{
+    <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
+}
 						
 						<form action="#">
 							<div class="input-boxes">
@@ -104,37 +107,51 @@
 </body>
 
 
-    @code{
-		[Parameter]
-        public string Id { get; set; }
+@code{
+    [Parameter]
+    public string Id { get; set; }
 
-        private MovieModel movie;
-        private IBrowserFile movieFile;
-        private IBrowserFile imageFile;
-        private string content;
-        private string mp;
-        private string ip;
-        private bool more = false;
-        private string linkIframe;
+    private MovieModel movie;
+    private IBrowserFile movieFile;
+    private IBrowserFile imageFile;
+    private string content;
+    private string mp;
+    private string ip;
+    private bool more = false;
+    private string linkIframe;
+        private bool showAlert = false;
+    private Severity severity;
+    private void CloseAlert()
+    {
+        showAlert = false;
+    }
+    protected override async Task OnInitializedAsync()
+    {
+        movie = await _httpClient.GetFromJsonAsync<MovieModel>($"Admin/EditMovie/{Id}");
+        linkIframe = $"{_httpClient.BaseAddress}Admin/MovieUpload/{Id}";
+    }
 
-        protected override async Task OnInitializedAsync()
+    private async Task HandleValidSubmit()
+    {
+        MovieModel moviePost = await _httpClient.GetFromJsonAsync<MovieModel>($"Admin/EditMovie/{Id}");
+        movie.StudioId = moviePost.StudioId;
+        movie.MovieId = moviePost.MovieId;
+        HttpResponseMessage response = await _httpClient.PostAsJsonAsync<MovieModel>("Admin/EditMovie", movie);
+        content = await response.Content.ReadAsStringAsync();
+                if (response.IsSuccessStatusCode)
         {
-            movie = await _httpClient.GetFromJsonAsync<MovieModel>($"Admin/EditMovie/{Id}");
-            linkIframe = $"{_httpClient.BaseAddress}Admin/MovieUpload/{Id}";
+            severity = Severity.Success;
         }
-
-        private async Task HandleValidSubmit()
+        else
         {
-            MovieModel moviePost = await _httpClient.GetFromJsonAsync<MovieModel>($"Admin/EditMovie/{Id}");
-            movie.StudioId = moviePost.StudioId;
-            movie.MovieId = moviePost.MovieId;
-            HttpResponseMessage response = await _httpClient.PostAsJsonAsync<MovieModel>("Admin/EditMovie", movie);
-            content = await response.Content.ReadAsStringAsync();
+            severity = Severity.Error;
         }
+        showAlert = true;
+    }
 
-        private async Task OnChooseMovieFile(InputFileChangeEventArgs e)
-        {
-            List<string> list = new List<string>
+    private async Task OnChooseMovieFile(InputFileChangeEventArgs e)
+    {
+        List<string> list = new List<string>
             {
                 "video/x-msvideo",
                 "video/mp4",
@@ -146,33 +163,39 @@
                 "video/3gpp2",
                 "video/x-matroska"
             };
-            if (list.Contains(e.File.ContentType))
+        if (list.Contains(e.File.ContentType))
+        {
+            movieFile = e.File;
+            char[] tokena = await _httpClient.GetFromJsonAsync<char[]>("User/GetToken");
+            string token = new string(tokena);
+            FirebaseStorageTask task = new FirebaseStorage("movie2-e3c7b.appspot.com", new FirebaseStorageOptions { AuthTokenAsyncFactory = async () => await Task.FromResult(await Task.FromResult(token)), ThrowOnCancel = true, HttpClientTimeout = TimeSpan.FromHours(2) }).Child(movie.StudioId).Child(movie.MovieId).Child("Movie").PutAsync(movieFile.OpenReadStream(long.MaxValue));
+            task.Progress.ProgressChanged += (s, e) =>
             {
-                movieFile = e.File;
-                char[] tokena = await _httpClient.GetFromJsonAsync<char[]>("User/GetToken");
-                string token = new string(tokena);
-                FirebaseStorageTask task = new FirebaseStorage("movie2-e3c7b.appspot.com", new FirebaseStorageOptions { AuthTokenAsyncFactory = async () => await Task.FromResult(await Task.FromResult(token)), ThrowOnCancel = true, HttpClientTimeout = TimeSpan.FromHours(2) }).Child(movie.StudioId).Child(movie.MovieId).Child("Movie").PutAsync(movieFile.OpenReadStream(long.MaxValue));
-                task.Progress.ProgressChanged += (s, e) =>
-                {
-                    mp = e.Percentage.ToString();
-                };
-                try
-                {
-                    await task;
-                }
-                catch
-                {
-                    content = "More 500MB use the other method upload";
-                }
+                content = e.Percentage.ToString();
+                severity = Severity.Info;
+                    showAlert = true;
+            };
+            try
+            {
+                await task;
             }
-            else
+            catch
             {
-                content = "Incorrect MIME";
+                content = "More 500MB use the other method upload";
+                severity = Severity.Error;
+                showAlert = true;
             }
         }
-        private async Task OnChooseImageFile(InputFileChangeEventArgs e)
+        else
         {
-            List<string> list = new List<string>
+            content = "Incorrect MIME";
+            severity = Severity.Error;
+                showAlert = true;
+        }
+    }
+    private async Task OnChooseImageFile(InputFileChangeEventArgs e)
+    {
+        List<string> list = new List<string>
             {
                 "image/bmp",
                 "image/gif",
@@ -182,33 +205,40 @@
                 "image/tiff",
                 "image/webp"
             };
-            if (list.Contains(e.File.ContentType))
-            {
-                imageFile = (e.File);
-                char[] tokena = await _httpClient.GetFromJsonAsync<char[]>("User/GetToken");
-                string token = new string(tokena);
-                FirebaseStorageTask task = new FirebaseStorage("movie2-e3c7b.appspot.com", new FirebaseStorageOptions { AuthTokenAsyncFactory = async () => await Task.FromResult(await Task.FromResult(token)), ThrowOnCancel = true, HttpClientTimeout = TimeSpan.FromHours(2) }).Child(movie.StudioId).Child(movie.MovieId).Child("Image").PutAsync(imageFile.OpenReadStream(long.MaxValue));
-                task.Progress.ProgressChanged += (s, e) =>
-                {
-                    ip = e.Percentage.ToString();
-                };
-                try
-                {
-                    await task;
-                }
-                catch
-                {
-                    content = "More 500MB use the other method upload";
-                }
-            }
-            else
-            {
-                content = "Incorrect MIME";
-            }
-        }
-        private void Upload()
+        if (list.Contains(e.File.ContentType))
         {
-            more = true;
+            imageFile = (e.File);
+            char[] tokena = await _httpClient.GetFromJsonAsync<char[]>("User/GetToken");
+            string token = new string(tokena);
+            FirebaseStorageTask task = new FirebaseStorage("movie2-e3c7b.appspot.com", new FirebaseStorageOptions { AuthTokenAsyncFactory = async () => await Task.FromResult(await Task.FromResult(token)), ThrowOnCancel = true, HttpClientTimeout = TimeSpan.FromHours(2) }).Child(movie.StudioId).Child(movie.MovieId).Child("Image").PutAsync(imageFile.OpenReadStream(long.MaxValue));
+            task.Progress.ProgressChanged += (s, e) =>
+            {
+                content = e.Percentage.ToString();
+                severity = Severity.Info;
+                    showAlert = true;
+            };
+            try
+            {
+                await task;
+            }
+            catch
+            {
+                content = "More 500MB use the other method upload";
+                severity = Severity.Error;
+                showAlert = true;
+            }
         }
+        else
+        {
+            content = "Incorrect MIME";
+            severity = Severity.Error;
+                showAlert = true;
+        }
+    }
+    private void Upload()
+    {
+        more = true;
+    }
+
 	}
 
