--- a/BlazorApp3/Client/Pages/Login.razor
+++ b/BlazorApp3/Client/Pages/Login.razor
@@ -10,7 +10,9 @@
 </head>
 
 <body>
+
 	<div class="container">
+
 		<input type="checkbox" id="flip">
 		<div class="cover">
 			<div class="front">
@@ -62,7 +64,10 @@
 								</div>
 								<div class="text sign-up-text">Don't have an account? <a href="/SignUp"><label>Sigup
 											now</label></a></div>
-								<h1 class="text sign-up-text">@content</h1>
+						@if (showAlert)
+{
+    <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
+}
 							</EditForm>
 						</div>
 					</form>
@@ -72,16 +77,22 @@
 	</div>
 </body>
 
-
 @code
 {
+	
 	protected string divCSS = "display: none;";
 	protected void DivCSS(string divCSS)
 	{
 		this.divCSS = divCSS;
 	}
+   private bool showAlert = false;
+    private Severity severity;
+    private void CloseAlert()
+    {
+        showAlert = false;
+    }
 	private readonly LogInModel login = new LogInModel();
-	private string content;
+	private string? content;
 	private async Task HandleValidSubmit()
 	{
 		try
@@ -92,17 +103,26 @@
 		catch
 		{
 			content = "Turn Off AdBlock";
+			severity = Severity.Error;
+			showAlert = true;
 			return;
 		}
-		
+
 		HttpResponseMessage response = await _httpClient.PostAsJsonAsync<LogInModel>("user/login", login);
-		content = await response.Content.ReadAsStringAsync();
+		
 		if (response.IsSuccessStatusCode)
 		{
+			content = await response.Content.ReadAsStringAsync();
+            severity = Severity.Success;
+			showAlert = true;
 			_accountService.Login();
 			_navigationManager.NavigateTo("/");
 		}
-		
-		
+		else
+		{
+			content = await response.Content.ReadAsStringAsync();
+			severity = Severity.Error;
+			showAlert = true;
+		}
 	}
 }
