--- a/BlazorApp3/Client/Pages/WatchCustomer.razor
+++ b/BlazorApp3/Client/Pages/WatchCustomer.razor
@@ -6,6 +6,12 @@
 
 <PageTitle> test</PageTitle>
 
+	@if (showAlert)
+{
+    <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
+}
+
+
 @if (movie == null || movieLink == null)
 {
     @if (canWatch == null)
@@ -21,8 +27,6 @@
             <NavLink class="nav-link" href="@linkVip">Buy</NavLink>
         </div>
     }
-
-
 }
 else
 {
@@ -56,7 +60,6 @@ else
 <button @onclick="@Com">Comment</button>
 
 
-<div>@content</div>
 
 
 
@@ -176,11 +179,14 @@ else
     private bool? canWatch;
     private string Acomment;
     private string content;
-    private string check;
     private List<CommentModel> commentList = new();
-
+    private bool showAlert = false;
+    private Severity severity;
     private bool sameDevice = false;
-
+    private void CloseAlert()
+    {
+        showAlert = false;
+    }
     private int index = 0;
     protected override async Task OnInitializedAsync()
     {
@@ -194,7 +200,6 @@ else
         {
             commentList = await _httpClient.GetFromJsonAsync<List<CommentModel>>($"Customer/Comment/{Id}/{index}");
         });
-
         var sameDeviceTask = Task.Run(async () =>
         {
             sameDevice = (await _httpClient.PostAsJsonAsync<string>("Customer/UserAgent", await JS.InvokeAsync<string>("getUserAgent"))).IsSuccessStatusCode;
@@ -209,15 +214,27 @@ else
 
         var tokenaTask = Task.Run(async () =>
         {
-           tokena =  await _httpClient.GetFromJsonAsync<char[]>("User/GetToken");
-            
+            tokena   =  await _httpClient.GetFromJsonAsync<char[]>("User/GetToken");
+
         });
         string token = new string(tokena);       
-        await Task.WhenAll(movieTask, commentTask, sameDeviceTask, canWatchTask, tokenaTask);
+
+
+        try
+        {
+            await Task.WhenAll(movieTask, commentTask, sameDeviceTask, canWatchTask, tokenaTask);
+        }
+        catch
+        {
+            content = "Turn off AdBlock";
+            severity = Severity.Error;
+            showAlert = true;
+            return;
+        }
 
         if (canWatch == true)
         {
-            
+
             try
             {
                 movieLink = await new FirebaseStorage("movie2-e3c7b.appspot.com", new FirebaseStorageOptions
@@ -232,6 +249,8 @@ else
             catch(Exception ex)
             {
                 content = ex.Message;
+                severity = Severity.Error;
+                showAlert = true;
             }
         }
     }
@@ -249,14 +268,19 @@ else
             }
             catch
             {
-                check = "Turn off AdBlock";
+                content = "Turn off AdBlock";
+                showAlert = true;
+                severity = Severity.Error;
+                StateHasChanged();
                 return;
             }
-            
+
 
             if (!sameDevice)
             {
-                check = "You cannot watch in many Device at the same time Logout then Login to update your last Device";
+                content = "You cannot watch in many Device at the same time Logout then Login to update your last Device";
+                showAlert = true;
+                severity = Severity.Error;
                 StateHasChanged();
             }
 
@@ -268,7 +292,17 @@ else
     {
         CommentModel up = new CommentModel()
         { Time = DateTime.UtcNow, MovieId = Id, CommentText = Acomment };
-        content = await (await _httpClient.PostAsJsonAsync<CommentModel>("Customer/Acomment", up)).Content.ReadAsStringAsync();
+        var response = (await _httpClient.PostAsJsonAsync<CommentModel>("Customer/Acomment", up));
+        content = await response.Content.ReadAsStringAsync();
+                if (response.IsSuccessStatusCode)
+        {
+            severity = Severity.Success;
+        }
+        else
+        {
+            severity = Severity.Error;
+        }
+        showAlert = true;
         List<CommentModel> commentListTemp = new();
 
         for (int i = 0; i <= index; i++)
