--- a/BlazorApp3/Client/Pages/Profile.razor
+++ b/BlazorApp3/Client/Pages/Profile.razor
@@ -35,7 +35,11 @@
 								<h5>@accountManagementModel.Role</h5>
 								<p style="font-weight: 300">@accountManagementModel.Id</p>
 								<p>@accountManagementModel.Wallet</p>
-								<p id="hideMe">@content</p>
+									@if (showAlert)
+{
+    <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
+}
+
 							</div>
 						</div>
 					</div>
@@ -161,8 +165,31 @@
 
 @code {
 	ChangeEmailModel changeEmail = new ChangeEmailModel();
+	   private bool showAlert = false;
+    private Severity severity;
+    private void CloseAlert()
+    {
+        showAlert = false;
+    }
 	public async Task ChangeEmail()
 	{
+
+		var response = await _httpClient.PostAsJsonAsync<ChangeEmailModel>("User/ChangeEmail", changeEmail);
+		content = await response.Content.ReadAsStringAsync();
+
+		if(response.IsSuccessStatusCode)
+		{
+      severity = Severity.Success;
+      showAlert = true;
+			_accountService.Login();
+      _navigationManager.NavigateTo("/Profile");
+		}
+		else
+		{
+			severity = Severity.Error;
+		}
+		showAlert = true;
+
 		var r = await _httpClient.PostAsJsonAsync<ChangeEmailModel>("User/ChangeEmail", changeEmail);
 
 		if(r.IsSuccessStatusCode)
@@ -174,14 +201,13 @@
 		{
 			content = await r.Content.ReadAsStringAsync();
 		}
-
 	}
 	public async Task ChangePass()
 	{
 		_navigationManager.NavigateTo("/ResetPassword");
 	}
 	private AccountManagementModel accountManagementModel = new AccountManagementModel();
-	private string content;
+	private string? content;
 	protected override async Task OnInitializedAsync()
 	{
 		accountManagementModel = await _httpClient.GetFromJsonAsync<AccountManagementModel>("user/Profile");
@@ -192,5 +218,14 @@
 		HttpResponseMessage response = await _httpClient.PostAsJsonAsync<AccountManagementModel>("user/EditProfile",
 		accountManagementModel);
 		content = await response.Content.ReadAsStringAsync();
+		if (response.IsSuccessStatusCode)
+        {
+            severity = Severity.Success;
+        }
+        else
+        {
+            severity = Severity.Error;
+        }
+        showAlert = true;
 	}
 }
